adding some css

--- a/app/salesorder/webapp/css/style.css
+++ b/app/salesorder/webapp/css/style.css
@@ -54,5 +54,15 @@ input {
     width: 350px;
 }
  .red{
-    background-color: red;
+    color: #c0392b;
+ }
+ .crimson{
+    color:crimson;
+ }
+ .green{
+    color: green;
+ }
+
+ .vBox{
+    margin: 10px;
  }
