--- a/app/salesorder/webapp/view/errorTable.fragment.xml
+++ b/app/salesorder/webapp/view/errorTable.fragment.xml
@@ -1,14 +1,20 @@
 <core:FragmentDefinition xmlns="sap.m" xmlns:table="sap.ui.table" xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout">
 	<Dialog id="errorTableDialog" contentHeight="50%" title="EXCEL STATUS" titleAlignment="Center" >
   <content>
+  <HBox>
+  <VBox  class="vBox">
   <Label text="TYPE"></Label>
   <Select id="typeSelect" textAlign="Center" change="onChangeType" selectedKey="ALL" items="{/types}">
     <core:Item text="{type}" key="{type}" />
   </Select>
+  </VBox>
+  <VBox  class="vBox">
    <Label text="REASON"></Label>
   <Select id="reasonSelect" textAlign="Center" change="onChangeReason" selectedKey="ALL" items="{/reason}">
     <core:Item text="{reason}" key="{reason}" />
   </Select>
+  </VBox>
+  </HBox>
   <Table id="table2">
   <!-- <columns>
   <Column ><Text text="PRODUCT"></Text></Column>
